# oxide

./: .gitignore  AGENT.md  Cargo.toml  Makefile  README.md  ROADMAP.md  benchmarker.sh  codemap.md  out_repair_original.txt  package-lock.json  test.py
crates/oxide-cli/: Cargo.toml  codemap.md  presets.json  presets.txt
crates/oxide-cli/src/: cli.rs  codemap.md  commands.rs  main.rs  presets.rs  progress.rs  report.rs  tree.rs  ui.rs
crates/oxide-cli/tests/unit/: cli.rs  commands.rs  presets.rs
crates/oxide-core/: Cargo.toml  codemap.md
crates/oxide-core/benches/: lz4_compare.rs  memory_management.rs  scanner_throughput.rs  throughput.rs  work_scheduling.rs
crates/oxide-core/src/: checksum.rs  codemap.md  crypto.rs  dictionary.rs  error.rs  lib.rs  recovery.rs  report.rs  types.rs
crates/oxide-core/src/buffer/: codemap.md  mod.rs  pool.rs
crates/oxide-core/src/compression/: codemap.md  deflate.rs  lz4.rs  lzma.rs  mod.rs  scratch.rs  zpaq.rs  zstd.rs
crates/oxide-core/src/compressors/: modes.rs
crates/oxide-core/src/core/: codemap.md  mod.rs  work_stealing.rs  worker_pool.rs
crates/oxide-core/src/format/: codemap.md  detector.rs  mod.rs  oxz.rs  raw_storage.rs
crates/oxide-core/src/io/: chunking.rs  codemap.md  mmap.rs  mod.rs  scanner.rs
crates/oxide-core/src/pipeline/: archive.rs  codemap.md  directory.rs  mod.rs  types.rs
crates/oxide-core/src/preprocessing/: audio_lpc.rs  binary_bcj.rs  image_locoi.rs  image_paeth.rs  image_ycocgr.rs  mod.rs  strategies.rs  text_bpe.rs  text_bwt.rs
crates/oxide-core/src/telemetry/: codemap.md  events.rs  memory.rs  mod.rs  profile.rs  report.rs  tags.rs  worker.rs
crates/oxide-core/tests/: compression.rs  core.rs  format.rs  format_detector_tests.rs  input_scanner_tests.rs  io.rs  mmap_input_tests.rs  oxz_format_tests.rs  phase1_pipeline_tests.rs  pipeline.rs  preprocessing.rs  preprocessing_compression_stubs_tests.rs  profile_tag_stack_tests.rs  report_tests.rs  support.rs  telemetry.rs  telemetry_tests.rs  types_tests.rs  work_stealing_tests.rs
crates/oxide-core/tests/buffer/: pool.rs
crates/oxide-core/tests/compression/: algorithms.rs  lz4.rs  lzma.rs  scratch.rs  stubs.rs  zstd.rs
crates/oxide-core/tests/core/: buffer_pool.rs  work_stealing.rs  worker_pool.rs
crates/oxide-core/tests/format/: detector.rs  oxz_format.rs  raw_storage.rs
crates/oxide-core/tests/io/: chunking.rs  input_scanner.rs  mmap_input.rs
crates/oxide-core/tests/pipeline/: components.rs  directory.rs  (+2 more)
(+194 files in other folders)
