[package]
name = "oxide-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"
nu-ansi-term = "0.50"
oxide-core = { path = "../oxide-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
