[package]
name = "oxide-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["telemetry"]
profiling = []
telemetry = []

[dependencies]
# Core async/parallelism
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
num_cpus = "1.16"

# Zero-copy I/O and memory management
memmap2 = "0.9"
bytes = "1.5"
memchr = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"

# Utilities
crc32fast = "1.3"
byteorder = "1.5"
infer = "0.16"
image = "0.25.9"
symphonia = "0.5.5"
jwalk = "0.8"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
lz4_flex = "0.11"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "memory_management"
harness = false

[[bench]]
name = "scanner_throughput"
harness = false

[[bench]]
name = "work_scheduling"
harness = false

[[bench]]
name = "lz4_compare"
harness = false
