[package]
name = "oxide-core"
version = "0.2.0"
edition = "2024"

[features]
default = ["telemetry"]
profiling = []
telemetry = []

[dependencies]
# Core async/parallelism
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
num_cpus = "1.16"

# Zero-copy I/O and memory management
memmap2 = "0.9"
bytes = "1.5"
memchr = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
jwalk = "0.8"
zstd = { version = "0.13", features = ["zdict_builder"] }
liblzma = { version = "0.4", features = ["static"] }
regex = "1.11"
libc = "0.2"
crc32c = "0.6"
lz4_flex = { version = "0.12", default-features = false }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "memory_management"
harness = false

[[bench]]
name = "scanner_throughput"
harness = false

[[bench]]
name = "work_scheduling"
harness = false

[[bench]]
name = "lz4_compare"
harness = false
